# talent_lens

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/semantic_search/api/: base.py  config.py  constants.py  llm.py  models.py
src/semantic_search/api/utils/: main_utils.py  typesense_utils.py
src/semantic_search/dashboard/: app.py
src/semantic_search/data/: seed.py
src/semantic_search/db/: models.py  pipeline.py  session.py
