[project]
name = "semantic-search"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "typesense (>=2.0.0,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)"
]

[tool.poetry]
packages = [{include = "semantic_search", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
